# p2p-hosting

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: lint.yml
backend/: Dockerfile.coordinator  manage_db.py  p2p_worker_main.py  pyproject.toml  setup.cfg
backend/app/: alembic.ini  main.py
backend/app/alembic/: env.py
backend/app/api/check_status/: db_check.py  db_connection.py  redis_check.py
backend/app/api/routes/: db_check.py  redis_check.py
backend/app/db/: database_connection.py  db_connection.py  redis_connection.py
backend/app/models/: __init__.py  base.py  monitoring.py  node.py  resource.py  task.py  user.py
frontend/: .eslintrc.cjs  Dockerfile  package-lock.json  package.json
helm/p2p-hosting-chart/: Chart.yaml  values.yaml
helm/p2p-hosting-chart/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
helm/p2p-hosting-chart/templates/tests/: test-connection.yaml
