[tool.poetry]
name = "p2p-backend"
version = "0.1.0"
description = "Thesis for university, backend for P2P Hosting platform"
authors = ["Volodymyy Vorobiov - volodymyrvorobiov2005@gmail.com"]

[tool.poetry.dependencies]
python = "^3.11"

# Web API
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}

# Database
sqlalchemy = {extras = ["asyncio"], version = "^2.0.23"}
alembic = "^1.12.1"         # Migration
psycopg2-binary = "^2.9.9"  # PostgreSQL driver

# Brokers
celery = "^5.3.6"
redis = "^5.0.1"

docker = "^6.1.3"           # Для керування Docker з Python

# Monitoring
psutil = "^5.9.6"