[tool.poetry]
name = "app"
version = "0.1.0"
description = "Thesis for university, backend for P2P Hosting platform"
authors = ["Volodymyy Vorobiov - <volodymyrvorobiov2005@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"

# Web API
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}

# Database
sqlalchemy = {extras = ["asyncio"], version = "^2.0.23"}
alembic = "^1.12.1"         # Migration
psycopg2-binary = "^2.9.9"  # PostgreSQL driver

# Brokers
celery = "^5.3.6"
redis = "^5.0.1"

docker = "^6.1.3"

# Monitoring
psutil = "^5.9.6"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.2.0"
mypy = "^1.16.0"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
ignore_missing_imports = true